fix(accessibility): update dark mode colors

--- a/src/app/pages/landing/about/about-customers/about-customers.component.scss
+++ b/src/app/pages/landing/about/about-customers/about-customers.component.scss
@@ -27,7 +27,7 @@ ion-item {
   }
 
   &.selected {
-    border-left-color: var(--ion-color-primary);
+    border-left-color: var(--ion-color-primary-accessible-text);
     filter: none;
 
     ion-icon {
